compiler/driver/tests/snapshots/diagnostics_snapshots__diag_no_std_rejects_print.snap
---
source: compiler/driver/tests/diagnostics_snapshots.rs
expression: format_all_errors(&out)
---
error[L004]: Expected '[' after '#'
  --> diag_no_std_rejects_print.ny:1:1
   |
  1 | # no_std
   | ^
   = label: attributes use `#[name]` syntax
   = help: example: `#[derive(Clone)]` or `#[inline]`
error[E021]: `print` is not available in no_std programs
  --> <source>:1:1
   = note: use extern I/O or UART for embedded targets
   = help: remove `#![no_std]` or provide your own I/O backend
